--- a/assets/scss/base/_sanitize.scss
+++ b/assets/scss/base/_sanitize.scss
@@ -1,4 +1,4 @@
-/*! sanitize.css v3.0.0 | CC0 1.0 Public Domain | github.com/10up/sanitize.css */
+// sanitize.css v3.0.0 | CC0 1.0 Public Domain | github.com/10up/sanitize.css
 
 $root-background-color: #FFFFFF !default;
 $root-box-sizing: border-box !default;
