--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,7 +50,7 @@
 @import "components/scroll-indicator";
 
 // Layout
-@import "layout/header";
-@import "layout/media-wrappers";
-@import "layout/footer";
-@import "layout/forms";
+@import "layouts/header";
+@import "layouts/media-wrappers";
+@import "layouts/footer";
+@import "layouts/forms";
