--- a/assets/scss/tools/_utility-classes.scss
+++ b/assets/scss/tools/_utility-classes.scss
@@ -74,6 +74,22 @@
   padding-left: 0 !important;
 }
 
+.u-mb1 {
+  margin-bottom: 1rem !important;
+}
+
+.u-mb2 {
+  margin-bottom: 2rem !important;
+}
+
+.u-mt1 {
+  margin-top: 1rem !important;
+}
+
+.u-mt2 {
+  margin-top: 2rem !important;
+}
+
 // This class adds a coma at every li except the ast one.
 // Note: This tip may not be ideal for accessibility, 
 // specifically screen readers. And copy/paste from the browser 
