--- a/assets/scss/components/_video.scss
+++ b/assets/scss/components/_video.scss
@@ -4,10 +4,14 @@
 
 .video {
   position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
+
+  &::after {
+    display: block;
+    content: '';
+    width: 100%;
+    padding-bottom: 56.25%;
+  }
+
   iframe,
   object,
   embed {
