--- a/app/assets/scss/components/_inputs.scss
+++ b/app/assets/scss/components/_inputs.scss
@@ -16,7 +16,7 @@ select {
   color: $black;
   height: $input-height;
   padding: .5em;
-  border: 1px solid $lightgrey2;
+  border: 1px solid $lightgrey;
   @include border-radius();
   background-color: #f7f7f7;
   @include placeholder(rgba($black, 0.4));
@@ -65,7 +65,7 @@ textarea {
   }
   &.disabled input {
     cursor: not-allowed;
-    background-color: $lightgrey2;
+    background-color: $lightgrey;
   }
   &.has-error {
     input {
