--- a/app/assets/scss/tools/_site-settings.scss
+++ b/app/assets/scss/tools/_site-settings.scss
@@ -8,8 +8,13 @@
 $audio-canvas-video: false; // True | False
 
 // Fonts
-$font1: 'Roboto', Arial, sans-serif;
-$font2: 'Miso', serif;
+$LatoBold: 'LatoBold', Arial, sans-serif;
+$DroidRegular: 'DroidSerifRegular', Times, sans-serif;
+$RalewayRegular: 'RalewayRegular', Verdana, sans-serif;
+$RalewayMedium: 'RalewayMedium', Verdana, sans-serif;
+$RalewaySemiBold: 'RalewaySemiBold', Verdana, sans-serif;
+
+$font1: $RalewayRegular;
 
 // = General Styles
 // -----------------------------
@@ -22,10 +27,6 @@ $font2: 'Miso', serif;
 }
 
 @mixin box-shadow {
-  box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.9);
-}
-
-@mixin box-shadow-gi {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 10px 0 rgba(0, 0, 0, 0.4);
 }
 
