--- a/app/assets/scss/tools/variables/_colors.scss
+++ b/app/assets/scss/tools/variables/_colors.scss
@@ -3,26 +3,22 @@
 // ----------------------
 
 // Graphic chart
-$red: #e74c3c;
-$blue: #1894c4;
-$lightblue: #d0e9f3;
+$red: #fa4a4a;
+$blue: #202f55;
+$grey: #909090;
+$lightgrey: #d0e9f3;
 $white: #fff;
+
 $orange: #d35400;
 $green: #27ae60;
 $purple: #9b59b6;
 $yellow: #f1c40f;
 $black: #303030;
-$grey: #909090;
-$lightgrey: #f3f3f3;
-$lightgrey2: #d0d0d0;
-$gold: #ebbc33;
-$gold2: #ffbe00;
-$gold-darker: #ffa939;
 $color1: $blue;
 $error: $red;
 $success: $green;
 // Using Sass Maps as explained here : https://jonsuh.com/blog/sass-maps/
-$social-colors: (facebook: #3b5998, twitter: #43bfe1, dribbble: #ea4c89, github: #171515, google: #db4437, youtube: #c4302b);
+$social-colors: (facebook: #3b5998, twitter: #43bfe1, dribbble: #ea4c89, github: #171515, google: #db4437, youtube: #c4302b, linkedin: #3272bd);
 .social-link {
   color: $white;
 }
