Create empty icons/ + img/ + fonts/ directories

--- a/app/assets/scss/components/_btn.scss
+++ b/app/assets/scss/components/_btn.scss
@@ -77,7 +77,7 @@ html.flex .btn-wrapper {
   display: block;
   padding: 15px 20px 13px;
   max-width: 25rem;
-  font-family: $ArquitectaBook;
+  font-family: $font1;
   @include rms(0);
   text-align: center;
   text-decoration: none;
