--- a/app/assets/scss/components/_video.scss
+++ b/app/assets/scss/components/_video.scss
@@ -1,6 +1,6 @@
-/* ==|====================
+/* ==|==========================
    Components / Video responsive
-   ======================= */
+   ============================= */
 
 .video {
   position: relative;
