--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -14,6 +14,7 @@
 @import "tools/site-settings";
 @import "tools/media-queries";
 @import "tools/utility-classes";
+@import "tools/family";
 
 // Base
 @import "base/sanitize";
