--- a/app/assets/scss/tools/_mixins.scss
+++ b/app/assets/scss/tools/_mixins.scss
@@ -380,10 +380,11 @@
 @mixin vector-bg-with-fallback($name) {
   background-image: url('#{$public_path}images/frontend/logos/#{$name}.png');
   background-image: none,
-  url('#{$public_path}images/frontend/logos/#{$name}.svg');
+                    url('#{$public_path}images/frontend/logos/#{$name}.svg');
 }
 
 /// Given the location of a webfont, will generate a font-face declaration with multiple file formats.
+/// Coverage for Internet Explorer 9 and above and all modern browsers on both desktop and mobile.
 /// @access public
 /// @param {String} $font-name - Font family name
 /// @param {String} $file-name - File name (no extension)
@@ -391,19 +392,13 @@
 /// @param {String} $style [normal] - Font style
 /// @example scss - Usage
 ///   @include font-face('gotham', '/fonts/gotham');
-@mixin font-face($font-name,
-$file-name,
-$weight: normal,
-$style: normal) {
+/// @link http://stateofwebtype.com/
+@mixin font-face($font-name, $file-name) {
   @font-face {
     font-family: quote($font-name);
-    src: url($file-name + '.eot');
-    src: url($file-name + '.eot?#iefix') format('embedded-opentype'),
-    url($file-name + '.woff') format('woff'),
-    url($file-name + '.ttf') format('truetype'),
-    url($file-name + '.svg##{$font-name}') format('svg');
-    font-weight: $weight;
-    font-style: $style;
+    src: url($file-name + '.woff2') format('woff2'),
+         url($file-name + '.woff') format('woff'),
+         url($file-name + '.otf') format('opentype');
   }
 }
 
