--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -75,6 +75,10 @@ body {
           padding-top: calc(#{$header--main-height} + #{$nav--main-height});
       }
   }
+  
+  // Fluid type by Vitaly Friedman
+  // https://speakerdeck.com/smashingmag/dirty-tricks-from-the-dark-corners-of-front-end
+  //font-size: calc(16px + (24 - 16)*(100vw - 320px)/(1920 - 320));
 
   // Remove the breakpoint block added 
   // by the media-queries mixin
