--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -26,7 +26,7 @@ html {
   // }
   overflow-y: scroll;
   /* [1] */
-  min-height: 100%;
+  min-height: 100vh;
   /* [2] */
   -webkit-text-size-adjust: 100%;
   /* [3] */
@@ -34,20 +34,22 @@ html {
   /* [3] */
   // Mobile First Approach
   // Refer to https://prowebtype.com/setting-type/
-  font-family: $font1, serif;
+  font-family: var(--font-primary), serif;
   font-size: 100%;
   // line-height: 1.6;
   font-weight: 400;
   margin: 0 auto;
   // padding: 2em; // padding so that bullet list don't touche the edge of the screen
   text-align: left;
+  -webkit-font-smoothing: antialiased;
 }
 
 body,
 html {
   width: 100%;
   margin: 0;
-  color: $black;
+  padding: 0;
+  color: var(--color-black);
 }
 
 // ---------------------------------
@@ -66,15 +68,6 @@ $ms-base: 1rem 1.25rem;
 body {
   @include rms(0); // 1rem
   position: relative;
-  padding-top: $header--main-height;
-  &.has-navbar {
-      @include mq($from: mobile, $until: desktop) {
-          padding-top: calc(#{$header--main-height} + #{$dropdown-height});
-      }
-      @include mq($from: desktop) {
-          padding-top: calc(#{$header--main-height} + #{$nav--main-height});
-      }
-  }
   
   // Fluid type by Vitaly Friedman
   // https://speakerdeck.com/smashingmag/dirty-tricks-from-the-dark-corners-of-front-end
@@ -95,9 +88,10 @@ h3,
 h4,
 h5,
 h6 {
-  @include transition();
-  line-height: 1.2;
   margin-bottom: 1rem;
+  line-height: 1.2;
+  font-weight: 400;
+  @include transition();
 }
 
 // The ms() function usually ranges from -6 to 6/7
@@ -126,7 +120,9 @@ a,
 ul,
 blockquote,
 figcaption {
-  font-family: $font1;
+  font-family: var(--font-primary);
+  color: var(--color-grey-50);
+  line-height: 1.5;
 }
 
 img {
@@ -138,21 +134,12 @@ button {
   cursor: pointer;
 }
 
+// button {
+//   cursor: pointer;
+// }
+
 ::selection {
-  background: $color1;
-  color: $white;
+  background: var(--color-primary);
+  color: var(--color-white);
   text-shadow: none;
-}
-
-i {
-  text-decoration: none;
-}
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
 }
