--- a/app/assets/scss/components/_inputs.scss
+++ b/app/assets/scss/components/_inputs.scss
@@ -12,29 +12,40 @@ textarea,
 select {
   display: flex;
   @include rms(0);
+  height: var(--input-height);
+  padding: .5rem;
+  border: var(--border-width) solid var(--color-grey-20);
+  border-radius: var(--border-radius);
   font-weight: 300;
-  color: $black;
-  height: $input-height;
-  padding: .5em;
-  border: 1px solid $lightgrey;
-  @include border-radius();
-  background-color: #f7f7f7;
-  @include placeholder() {
-    color: rgba($black, 0.4);
-  }
+  font-family: var(--RobotoLight);
+  color: var(--color-black);
   will-change: border-color;
+  outline: none;
+  @include transition;
 
   &:focus {
-    border-color: $blue;
+    border-color: var(--color-primary);
+  }
+
+  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: var(--color-grey-30);
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: var(--color-grey-30);
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: var(--color-grey-30);
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: var(--color-grey-30);
   }
 
   &.touched:required:valid {
-      border-color: $success;
-      background-color: transparent ;
+      border-color: var(--color-success);
   }
 
   &.touched:required:invalid {
-      border-color: $error;
+      border-color: var(--color-error);
 
       & + .input-error-msg {
         display: block;
@@ -53,18 +64,21 @@ textarea {
   flex-direction: column;
   align-items: baseline;
   width: 100%;
-  margin-bottom: 1rem;
-  font-family: $font1;
+  margin-bottom: 1.5rem;
+
   &:last-child {
     margin-bottom: 0;
   }
+
   label {
+    color: var(--color-grey-50);
     margin-bottom: .5rem;
+
     &.is-mandatory {
-      &:after {
+      &::after {
         content: '*';
         @include rms(-1);
-        color: $red;
+        color: var(--color-red);
       }
     }
   }
@@ -83,11 +97,11 @@ textarea {
   }
   &.disabled input {
     cursor: not-allowed;
-    background-color: $lightgrey;
+    background-color: var(--color-lightgrey-20);
   }
   &.has-error {
     input {
-      border-color: $error;
+      border-color: var(--color-error);
     }
   }
   &--arrow-down {
@@ -96,7 +110,7 @@ textarea {
       position: absolute;
       display: block;
       @include size(13px);
-      top: $input-height / 2;
+      top: var(--input-height) / 2;
       transform: translateY(-50%);
       right: 1rem;
       background-image: url('../icons/arrow-down.svg');
@@ -111,8 +125,7 @@ textarea {
 // the associated input
 // eg : 500 letters maximum (textarea)
 .input-upper-text {
-    font-family: $LatoRegular;
-    color: $grey;
+    color: var(--color-grey-20);
     @include rms(-1);
     margin-bottom: 10px;
 }
@@ -121,13 +134,13 @@ textarea {
   display: flex;
   flex-direction: column;
   font-weight: 200;
-  color: $red;
+  color: var(--color-red);
   @include rms(-1);
 }
 
 // select {
 //     width: 100%;
-//     height: $input-height;
+//     height: var(--input-height);
 //     border: 1px solid $grey;
 //     background-color: $white;
 // }
@@ -139,7 +152,7 @@ textarea {
   }
   &.has-error {
     .checkbox-label {
-      color: $error;
+      color: var(--color-error);
     }
   }
 }
@@ -172,7 +185,7 @@ textarea {
   }
   &.has-error {
     .radio-label {
-      color: $error;
+      color: var(--color-error);
     }
   }
   .radio-label {
@@ -209,8 +222,8 @@ textarea {
 
 .file-input:hover + .file-label,
 .file-input:focus + .file-label {
-  background: $blue;
-  color: white;
+  background: var(--color-blue);
+  color: var(--color-white);
 }
 
 // ---------------
