--- a/app/assets/scss/components/_logo.scss
+++ b/app/assets/scss/components/_logo.scss
@@ -2,16 +2,15 @@
    Components / Logo
    ======================= */
 
-.logo {
-  height: 2rem;
-  width: 5rem;
-  //@include vector-bg-with-fallback(logoFileName);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  @include mq($from: desktop) {
-    width: 8rem;
-    height: 2.5rem;
-  }
+.c-logo {
+  // height: 2rem;
+  // width: 9rem;
+  @include size(10rem, 4rem);
+}
+
+.c-logo__icon {
+  height: 100%;
+  width: 100%;
+  fill: var(--color-black);
 }
 
