--- a/app/assets/scss/components/_media.scss
+++ b/app/assets/scss/components/_media.scss
@@ -7,57 +7,102 @@
 .media {
   display: flex;
   align-items: flex-start;
-  padding: $padding-media;
-  @include mq($from: mobile, $until: desktop) {
-    flex-direction: column;
+  flex-direction: column;
+  
+  @include mq($from: mobile, $until: tablet) {    
+    & + & {
+      margin-top: 3rem;
+    }
+  }
+
+  @include mq($from: tablet) {
+    width: calc((100% - 6rem) / 3);
+    
+    &:nth-child(n+4) {
+      margin-top: 3rem;
+    }
   }
 }
 
-.media--photo > .media__figure {
-  @include mq($from: mobile, $until: desktop) {
-    margin-right: 0;
+.media--full {
+  .media__body {
+    max-width: 30.625rem; // 490px
   }
-  @include mq($from: desktop, $until: wide) {
-    flex-basis: 50%;
-    margin-right: $padding-media;
+  .media__title {
+    font-size: 36px;
+    line-height: 1.1388888889;
+    margin-bottom: 2rem;
+  }
+  .media__text {
+    font-size: 19px;
+    line-height: 1.5789473684;
+  }
+  
+  .list-pros {
+    margin-top: 2.5rem;
+  }
+
+  @include mq($from: tablet) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+
+    .media__figure {
+      max-width: 54%;
+      margin-bottom: 0;
+      margin-right: 2rem;
+      box-shadow: var(--box-shadow-screen);
+    }
   }
 }
 
-// Media reverse should only be used for screen larger than mobile.
-.media--reverse > .media__figure {
-  margin-right: 0;
-  @include mq($from: desktop) {
-    order: 1;
-    margin-left: $padding-media;
+.media--content-reversed {
+  @include mq($from: tablet) {
+    .media__figure {
+      order: 1;
+      margin-left: 2rem;
+      margin-right: 0;
+    }
   }
+}
+
+.media--content-v-centered {
+  align-items: center;
+  text-align: center;
+}
+
+.media--content-left {
+  justify-content: flex-end;
 }
 
 .media__figure {
-  margin-bottom: ($padding-media / 2);
+  margin-bottom: calc(var(--padding-media) * 2.5);
+
+  svg {
+    width: 7rem;
+    max-height: 2.5rem;
+  }
+}
+
+.media__figure--dev {
+  svg {
+    max-height: 60px;
+  }
 }
 
 .media__body {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
   flex: 1;
-  &,
-  &:last-child {
-    margin-bottom: 0;
-  }
-  @include transition();
 }
 
 .media__title {
-  margin: 0 0 ($padding-media / 2);
-}
-
-.media__subtitle {
-  font-size: 1.2rem;
-  font-weight: lighter;
-  margin: 0 0 $padding-media;
+  font-family: var(--RobotoLight);
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: calc(var(--padding-media) / 2);
+  color: var(--color-black);
 }
 
 .media__text {
-  margin-bottom: .5rem;
+  margin-bottom: var(--padding-media);
 }
-
