--- a/app/assets/scss/layouts/_forms.scss
+++ b/app/assets/scss/layouts/_forms.scss
@@ -2,99 +2,41 @@
    Layout / Forms
    ======================= */
 
-.form {
-  width: 100%;
-  @include mq($from: tablet) {
-    max-width: $single-form-width--tablet;
-    width: $single-form-width--tablet;
-  }
-  @include mq($from: desktop) {
-    padding: 1rem;
-    max-width: $single-form-width--desktop;
-    width: $single-form-width--desktop;
-  }
-  fieldset + fieldset {
-    margin-top: 1rem;
-    @include mq($from: desktop) {
-      margin-top: 2rem;
-    }
-  }
-  .validation {
-    margin-top: 1rem;
-  }
-  .sport-wrapper {
-    margin-bottom: 2rem;
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.form__section {
-  margin-bottom: 2rem;
-  @include mq($from: desktop) {
-    margin-bottom: 3rem;
-  }
-}
-
-.form--facebook {
+.l-form {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  .btn--facebook {
-    width: 100%;
-    max-width: 18rem;
-  }
-}
-
-.form--login,
-.form--register {
-  .alert--error {
-    margin-bottom: 1rem;
-  }
-}
-
-.form--login .password-forgotten {
-  margin-top: .5rem;
-  text-decoration: underline;
-}
-
-.form__btn-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
-  margin-top: 1rem;
-  @include mq($from: tablet) {
-    justify-content: flex-end;
-    margin-top: 2rem;
-  }
-}
-
-.form__btn-validate,
-.form__btn-cancel {
-  min-width: 6rem;
-  width: 45%;
-  padding: .5rem 1rem;
-  @include mq($from: tablet) {
-    width: auto;
-  }
-}
-
-.form__btn-validate {
-  order: 1;
+  max-width: 30rem;
   margin-left: auto;
-  @include mq($from: tablet) {
-    margin-left: 1rem;
+  margin-right: auto;
+  font-family: var(--font-primary);
+}
+
+.l-form--subscribe-alpha {
+  .l-form__email {
+    flex-grow: 1;
   }
 }
 
-.form__btn-cancel {
-  order: 0;
-}
+.l-form--subscribe-alpha__fullname-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
 
-.form__terms-and-conditions {
-  margin-top: 1rem;
-  @include rms(-1);
-}
+  .input-wrapper {
+    margin-bottom: 0;
+  }
 
+  .input-wrapper + .input-wrapper {
+    @include mq($from: mobile, $until: 549px) {
+      margin-top: 1rem;
+    }
+    @include mq($from: 550px) {
+      margin-left: 1rem;
+    }
+  }
+
+  @include mq($from: 550px) {
+    flex-direction: row;
+  }
+}
