--- a/app/assets/scss/layouts/_media-wrappers.scss
+++ b/app/assets/scss/layouts/_media-wrappers.scss
@@ -3,44 +3,22 @@
    ======================= */
 
 // Media wappers are blocks containings media objects
-.service-pros {
+.media-wrapper {
   display: flex;
-  flex-flow: row wrap;
-  margin: 0 auto 1rem;
-  @include mq($from: tablet, $until: wide) {
-    width: 80%;
-    & .media--icon {
-      flex-basis: calc(100% / 2);
-    }
-  }
-  @include mq($from: wide) {
-    max-width: $max-content-width;
-    & .media--icon {
-      flex-direction: column;
-      flex-basis: calc(25% - 2rem);
-      width: calc(25% - 2rem);
-    }
-  }
-}
 
-.service-presentation {
-  margin-right: auto;
-  margin-left: auto;
+  @include mq($from: mobile, $until: tablet) {
+    flex-direction: column;
+  }
   @include mq($from: tablet) {
-    width: 80%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    // since all SVG inside do not have
+    // the same height we want to align
+    // them according to their body text
+    align-items: flex-end;
   }
-  @include mq($from: wide) {
-    max-width: $max-content-width;
-  }
 }
 
-.media--presentation-item,
-.media--team {
-  margin-bottom: 2rem;
+.media-wrapper--full-width {
+  flex-direction: column;
 }
-
-.media--presentation-item {
-  margin: 0 auto;
-  max-width: $max-content-width;
-}
-
