--- a/app/assets/scss/styleguide.scss
+++ b/app/assets/scss/styleguide.scss
@@ -37,7 +37,7 @@
 .styleguide__section__title {
     text-align: center;
     margin-bottom: 1rem;
-    color: $blue;
+    color: var(--color-blue);
     a {
         text-align: center;
     }
@@ -60,8 +60,8 @@
     &--typography,
     &--buttons {
         @include flex-vertical-center();
-        button[class*="btn--"],
-        a[class*="btn--"] {
+        button[class*="m-btn--"],
+        a[class*="m-btn--"] {
             margin-bottom: 1rem;
         }
     }
@@ -152,22 +152,22 @@
 
     .service-presentation {
         .media--presentation-item:nth-child(odd) {
-            background-color: $lightgrey;
+            background-color: var(--color-lightgrey-20);
             .media__title {
-                color: $blue;
+                color: var(--color-blue);
             }
             .media__figure {
                 margin-right: 0;
                 @include mq($from: desktop) {
                     order: 1;
-                    margin-left: $padding-media;
+                    margin-left: var(--color-padding-media);
                 }
             }
         }
 
         .media--presentation-item:nth-child(even) {
             .media__title {
-                color: $red;
+                color: var(--color-red);
             }
         }
     }
