--- a/app/assets/scss/tools/variables/_general.scss
+++ b/app/assets/scss/tools/variables/_general.scss
@@ -2,60 +2,66 @@
 // == Variables / General
 // ----------------------
 
+$header-nav-breakpoint: 700px;
+
+:root {
 /// ---------------------
 /// STYLE
 /// ---------------------
-$border-radius: 5px;
+--border-radius: 4px;
+--border-width: 1px;
+--base-padding: 1rem;
+--box-shadow-screen: 0px 64px 80px -24px rgba(0,0,0,0.24); 
 
 /// ---------------------
 /// GRID
 /// ---------------------
-$max-content-width: 65rem !default;
+--max-content-width: 90rem;
 
 /// ---------------------
 /// HEADER
 /// ---------------------
-$header--main-height: 3rem !default;
+--header--main-height: 3rem;
 
 /// ---------------------
 /// MODAL
 /// ---------------------
-$modal-header-height: 4rem !default;
-$modal-padding: 2rem !default;
+// --modal-header-height: 4rem;
+// --modal-padding: 2rem;
 
 /// ---------------------
 /// ALERT
 /// ---------------------
-$alert-side-padding: 1.3rem !default;
-$tooltip-icon-color: $blue !default;
+// --alert-side-padding: 1.3rem;
+// --tooltip-icon-color: --blue;
 
 /// ---------------------
 /// DROPDOWN
 /// ---------------------
-$dropdown-height: 3rem !default;
-$padding-dropdown: 1rem  !default;
-$bgc-dropdown: $blue !default;
+// --dropdown-height: 3rem;
+// --padding-dropdown: 1rem ;
+// --bgc-dropdown: --blue;
 
 /// ---------------------
 /// MEDIA
 /// ---------------------
-$padding-media: 1rem !default;
+--padding-media: 1rem;
 
 /// ---------------------
 /// NAV
 /// ---------------------
-$nav--main-height: 4rem !default;
+--nav--main-height: 4rem;
 
 /// ---------------------
 /// FORM
 /// ---------------------
-$input-height: 3rem !default;
-$single-form-width--tablet: 18rem !default;
-$single-form-width--desktop: 30rem !default;
+--input-height: 3rem;
+--single-form-width--tablet: 18rem;
+--single-form-width--desktop: 30rem;
 
 /// ---------------------
 /// FOOTER
 /// ---------------------
-$footer-padding: 1rem !default;
-$footer-social-icon-size: 2.5rem !default;
-
+// --footer-padding: 1rem;
+// --footer-social-icon-size: 2.5rem;
+}
