--- a/app/assets/scss/tools/_utility-classes.scss
+++ b/app/assets/scss/tools/_utility-classes.scss
@@ -134,9 +134,9 @@
   position: absolute !important;
   width: 1px !important;
   height: 1px !important;
-  margin: -1px !important;
   padding: 0 !important;
   border: 0 !important;
   overflow: hidden !important;
-  clip: rect(0 0 0 0) !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px) !important;
 }
